--- a/templates/head-footer.html
+++ b/templates/head-footer.html
@@ -83,7 +83,7 @@
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="" class="btn btn-default btn-flat">个人中心</a>
+                                <button class="btn btn-default btn-flat" onclick="doChangepasswd()">修改密码</button>
                             </div>
                             <div class="pull-right">
                                 <a href="/logout/" class="btn btn-default btn-flat">注销用户</a>
@@ -116,3 +116,4 @@
     </footer>
 
 {% endblock %}
+
