--- a/templates/system/users/user.html
+++ b/templates/system/users/user.html
@@ -213,11 +213,11 @@
         });
         layer.full(div)
     }
-
+   // 修改密码
     function doChangepasswd(id) {
     layer.open({
         type: 2,
-        title: '编辑',
+        title: '修改密码',
         shadeClose: false,
         maxmin: true,
         area: ['850px', '350px'],
